--- a/Stream-Two.html
+++ b/Stream-Two.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Stream-One.html">Stream One</a></li>
-            <li><a href="Stream-Two.html">Stream Two</a></li>
-            <li><a href="Stream-Three.html">Stream Three</a></li>
+            <li><a href="index.html">Portfolio One</a></li>
+            <li><a href="Stream-Two.html">Portfolio Two</a></li>
+            <li><a href="Stream-Three.html">Portfolio Three</a></li>
         </ul>
     </nav>
     <h1>Portfolio Two</h1>
