--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Stream-One.html">Portfolio One</a></li>
+            <li><a href="index.html">Portfolio One</a></li>
             <li><a href="Stream-Two.html">Portfolio Two</a></li>
             <li><a href="Stream-Three.html">Portfolio Three</a></li>
         </ul>
